# adk-samples

./: .gitignore  README.md  adk.ipynb  adk.py  callback_logging.py  pyproject.toml
.gemini/: El Pibe de Oro.txt  The_Truth_Within.txt  settings.json
google_search_agent/: agent.py
ksei_agent/: agent.py
movie_pitch_agent/: agent.py
portfolio_assessment_agent/: agent.py
research_agent_adk/: DEPLOYMENT_CLOUD_RUN.md  Dockerfile  README.md  pyproject.toml  start.sh
research_agent_adk/research_agent_adk/: __init__.py  agent.py  config.py  schemas.py  server.py  tools.py
research_agent_adk/tests/: test_smoke.py
travel_agent/: agent.py
weather_agent/: __init__.py  litellm_openrouter_ollama_agent.py  readme.md
